# cgns24-renderer

./: .gitignore  CMakeLists.txt  README.md
includes/: config.h  renderer.h  shader.h
includes/glad/: glad.h
src/: glad.c  main.cpp
src/rendering/: renderer.cpp  shader.cpp
